Freed some memory

--- a/.gitignore
+++ b/.gitignore
@@ -179,3 +179,14 @@ uvva/output.csv
 /uvva/examples/uvva_pipeline/TDS_COSMOS/fields/2604982877414227968/lcs/lc_2604982877414227968_6_7_19_85_86_98_104_137_155_170_173_184_191_200.png
 /uvva/examples/uvva_pipeline/TDS_COSMOS/fields/2605053246158405632/lcs/lc_2605053246158405632_482_499_567_570_647_650_837_1345_1401_1409_1689_2114_2328.png
 /uvva/examples/uvva_pipeline/TDS_COSMOS/fields/2605053246158405632/lcs/lc_2605053246158405632_65_66_103_126_136_179_183_225_309_337_340_348_367_368.png
+/uvva/examples/uvva_pipeline/TDS_COSMOS/fields/2604912508670050304/sky_map_hr_2604912508670050304.png
+/uvva/examples/uvva_pipeline/TDS_COSMOS/fields/6381787756527353856/hist_detections_6381787756527353856.png
+/uvva/examples/uvva_pipeline/TDS_COSMOS/fields/6381787756527353856/hist_sources_6381787756527353856.png
+/uvva/examples/uvva_pipeline/TDS_COSMOS/fields/6381787756527353856/scatter_detections_6381787756527353856.png
+/uvva/examples/uvva_pipeline/TDS_COSMOS/fields/6381787756527353856/scatter_sources_6381787756527353856.png
+/uvva/examples/uvva_pipeline/TDS_COSMOS/fields/6381787756527353856/sky_map_hr_6381787756527353856.png
+/uvva/examples/uvva_pipeline/TDS_COSMOS/fields/6388191295067652096/hist_detections_6388191295067652096.png
+/uvva/examples/uvva_pipeline/TDS_COSMOS/fields/6388191295067652096/hist_sources_6388191295067652096.png
+/uvva/examples/uvva_pipeline/TDS_COSMOS/fields/6388191295067652096/scatter_detections_6388191295067652096.png
+/uvva/examples/uvva_pipeline/TDS_COSMOS/fields/6388191295067652096/scatter_sources_6388191295067652096.png
+/uvva/examples/uvva_pipeline/TDS_COSMOS/fields/6388191295067652096/sky_map_hr_6388191295067652096.png
