--- a/uvva/uvva_cfg.yaml
+++ b/uvva/uvva_cfg.yaml
@@ -8,10 +8,11 @@ general:
     log_level       : "INFO"                            # ["NONE", "DEBUG", "INFO", "WARNING", "ERROR", "CRITICAL"]
     log_file        : "uvva.log"                        # Will be written into "out_dir"
     hd_img_out      : true                              # Write out high definition images
-    hp_coverage_out : false                                   # Write out visti& exposure of fields in a separate fits file
+    hp_coverage_out : false                             # Write out visti& exposure of fields in a separate fits file
     nr_cpus         : 4                                 # Number of CPUs to use. If "null" all available are used.
-    mpl_backend     : "SYSTEM"                          # Backend of matplotlib to show / store figures ("SYSTEM", "AGG", "TkAgg", ..).
-
+    mpl_backend     : "SYSTEM"                          # Backend of matplotlib to show / store figures ["SYSTEM", "AGG", "TkAgg", ..].
+    save_dets       : "selected"                        # Store detections into region file, options are ["selected","all","none"]
+    
 cluster:
     meanshift:
         bandwidth     : 5               # In arcsec, to estimate it automatically specify "null"
