Continue renaming inside files to VASCA

--- a/.env_template
+++ b/.env_template
@@ -1,8 +1,8 @@
-# Location of Sync&Share directory "ULTRASAT-data/uc_science/uvvarcat"
-UC_SAS_UVVARCAT="local_path/to/synced/sas/cloud/folders/uvvarcat"
+# Location of Sync&Share directory "ULTRASAT-data/uc_science/vascarcat"
+UC_SAS_VASCARCAT="local_path/to/synced/sas/cloud/folders/vascarcat"
 
 # Place holder for future use of the LUSTRE storage system
-UC_LUSTRE_UVVARCAT="/dev/null"
+UC_LUSTRE_VASCARCAT="/dev/null"
 
-# UVVA testing resources
-UC_UVVA_TEST_RESOURCES = "."
+# VASCA testing resources
+UC_VASCA_TEST_RESOURCES = "."
