--- a/vasca/examples/vasca_pipe_example_cfg.yaml
+++ b/vasca/examples/vasca_pipe_example_cfg.yaml
@@ -1,8 +1,8 @@
 # To run this analysis example type the following from this directory: 
-# 'uvva_pipe --cfg uvva_pipe_example_cfg.yaml'
+# 'vasca_pipe --cfg uvva_pipe_example_cfg.yaml'
 #
 # You can further analyse the results using the notebook
-# 'uvva_pipe_example_analysis.ipynb'
+# 'vasca_pipe_example_analysis.ipynb'
 #
 # The pipeline analyses two TDS_COSMOS fields of the GALEX TDS survey
 #
@@ -12,10 +12,10 @@ authors : "UC science"
 comment : "Example configuration file"
 
 general:
-    name            : "uvva_pipe_example"
+    name            : "vasca_pipe_example"
     out_dir_base    : "CWD"                             # If "CWD" current work directory will be used.
     log_level       : "INFO"                            # ["NONE", "DEBUG", "INFO", "WARNING", "ERROR", "CRITICAL"]
-    log_file        : "uvva.log"                        # Will be written into "out_dir"
+    log_file        : "vasca.log"                        # Will be written into "out_dir"
     hd_img_out      : true                              # Write out high definition images
     hp_coverage_out : false                                   # Write out visti& exposure of fields in a separate fits file
     nr_cpus         : 2                                 # Number of CPUs to use. If "null" all available are used.
@@ -62,7 +62,7 @@ selection:
             ul_weight    : [2.0,.inf]
 
 ressources:                      
-    load_method      : "UVVA"     # Allowed are ["MAST_REMOTE", "MAST_LOCAL", "UVVA", "AUTO"]
+    load_method      : "VASCA"     # Allowed are ["MAST_REMOTE", "MAST_LOCAL", "UVVA", "AUTO"]
     load_products    : true             # Get data products from MAST, if false only meta data is loaded
     field_kwargs:
         data_path        : null
