--- a/vasca/test/resources/vasca_test_cfg.yaml
+++ b/vasca/test/resources/vasca_test_cfg.yaml
@@ -6,7 +6,7 @@ general:
     name          : "TDS_COSMOS_21-22"
     out_dir_base  : "./vasca/test/out_pipe"                               # If "CWD" current work directory will be used
     log_level     : "DEBUG"                                    #["NONE", "DEBUG", "INFO", "WARNING", "ERROR", "CRITICAL"]
-    log_file      : "vasca.log"                                 # Will be written into "out_dir"
+    log_file      : "default"                                 # Will be written into "out_dir"
     hd_img_out    : false
     hp_coverage_out : false                                   # Write out visti& exposure of fields in a separate fits file
     nr_cpus       : 2
