--- a/vasca/vasca_cfg.yaml
+++ b/vasca/vasca_cfg.yaml
@@ -6,7 +6,7 @@ general:
     name            : "TDS_COSMOS"
     out_dir_base    : "./examples/vasca_pipeline"        # If "CWD" current work directory will be used.
     log_level       : "DEBUG"                            # ["NONE", "DEBUG", "INFO", "WARNING", "ERROR", "CRITICAL"]
-    log_file        : "vasca.log"                        # Will be written into "out_dir"
+    log_file        : "default"                        # Will be written into "out_dir", if ""default" a default name will be created 
     hd_img_out      : true                              # Write out high definition images
     hp_coverage_out : false                             # Write out visti& exposure of fields in a separate fits file
     nr_cpus         : 4                                 # Number of CPUs to use. If "null" all available are used.
