--- a/vasca/test/resources/vasca_test_cfg.yaml
+++ b/vasca/test/resources/vasca_test_cfg.yaml
@@ -34,7 +34,6 @@ observations:
             cluster_all   : true
             n_jobs        : null
             max_iter      : 300
-        add_upper_limits  : true
 
     selection:
         det_quality:
@@ -55,13 +54,17 @@ observations:
             table    : "tt_sources"
             sel_type : "and"    # These are OR selections
             range:
-                nr_det        : [1,.inf]
-                nr_uls   : [1,.inf]            
+                nr_det        : [1,.inf]          
         src_variability:
             table    : "tt_sources"
             sel_type : "or"
             range:        
-                mag_rchiq     : [4.0,.inf]
+                flux_rchiq     : [4.0,.inf]
     #            mag_dmax      : [0.2,.inf]
                 mag_dmax_sig  : [5.0,.inf]
                 ul_weight    : [2.0,.inf]
+        det_association : 
+            table     : "tt_detections"
+            ref_table : "tt_sources"
+            sel_type  : "is_in"
+            var       : "fd_src_id"
