--- a/vasca/vasca_cfg.yaml
+++ b/vasca/vasca_cfg.yaml
@@ -12,7 +12,7 @@ general:
 #    run_obs         :
     
 ressources:                      
-    load_method      : "MAST_REMOTE"     # Allowed are ["MAST_REMOTE", "MAST_LOCAL", "VASCA", "AUTO"]
+    load_method      : "VASCA"     # Allowed are ["MAST_REMOTE", "MAST_LOCAL", "VASCA", "AUTO"]
     load_products    : true             # Get data products from MAST, if false only meta data is loaded
     field_kwargs:
         data_path        : null
@@ -39,7 +39,6 @@ observations:
             cluster_all   : true
             n_jobs        : null
             max_iter      : 300
-        add_upper_limits  : true
 
     selection:
         det_quality:
@@ -51,7 +50,7 @@ observations:
                 point_src_prob : [0.95,1.0]
                 bright_match   : [-0.5,0.5]
                 mag            : [18,26]
-                mag_err        : [0,0.5]
+                mag_err        : [0.000001,0.5]
             bitmask:
                 # Specify the ones to ignore (=keep row).
                 # For GALEX a description is at the end of this document
@@ -60,17 +59,21 @@ observations:
             table    : "tt_sources"
             sel_type : "and"    # These are OR selections
             range:
-                nr_det        : [1,.inf]
-                nr_uls   : [1,.inf]            
+                nr_det        : [2,.inf]          
         src_variability:
             table    : "tt_sources"
             sel_type : "or"
             range:        
-                mag_rchiq     : [4.0,.inf]
+                flux_rchiq     : [4.0,.inf]
     #            mag_dmax      : [0.2,.inf]
                 mag_dmax_sig  : [5.0,.inf]
                 ul_weight    : [2.0,.inf]
-
+        #Select detections associated to sources
+        det_association : 
+            table     : "tt_detections"
+            ref_table : "tt_sources"
+            sel_type  : "is_in"
+            var       : "fd_src_id"
   
 # GALEX artifact flags
 # ( 1): edge; Detector bevel edge reflection (NUV only).
