--- a/vasca/vasca_cfg.yaml
+++ b/vasca/vasca_cfg.yaml
@@ -51,6 +51,7 @@ observations:
                 bright_match   : [-0.5,0.5]
                 mag            : [18,26]
                 mag_err        : [0.000001,0.5]
+                pos_err        : [0.00000001,0.5]
             bitmask:
                 # Specify the ones to ignore (=keep row).
                 # For GALEX a description is at the end of this document
