--- a/vasca/vasca_cfg.yaml
+++ b/vasca/vasca_cfg.yaml
@@ -6,13 +6,13 @@ general:
     name            : "TDS"
     out_dir_base    : "./examples/vasca_pipeline"        # If "CWD" current work directory will be used.
     log_level       : "DEBUG"                            # ["NONE", "DEBUG", "INFO", "WARNING", "ERROR", "CRITICAL"]
-    log_file        : "default"                        # Will be written into "out_dir", if ""default" a default name will be created 
+    log_file        : "default"                         # Will be written into "out_dir", if ""default" a default name will be created 
     nr_cpus         : 4                                 # Number of CPUs to use. If "null" all available are used.
-    save_dets       : "selected"                        # Store field detections into region file, options are ["selected","all","none"]
-#    run_obs         :
+    save_dets       : false                            # Store selected field detections into region file
+    save_ref_srcs   : false                             # Store referenze sources into region file
     
 ressources:                      
-    load_method      : "MAST_REMOTE"     # Allowed are ["MAST_REMOTE", "MAST_LOCAL", "VASCA", "AUTO"]
+    load_method      : "VASCA"     # Allowed are ["MAST_REMOTE", "MAST_LOCAL", "VASCA", "AUTO"]
     load_products    : true             # Get data products from MAST, if false only meta data is loaded
     field_kwargs:
         data_path        : null
@@ -22,24 +22,24 @@ observations:
   - observatory   : "GALEX"
     obs_filter    : "NUV"
     obs_field_ids :
-        # - 2592597978464124928  #PS_XMMLSS_MOS00
-        # - 2592668347208302592  #PS_XMMLSS_MOS01
-        # - 2592738715952480256  #PS_XMMLSS_MOS02
-        # - 2592809084696657920  #PS_XMMLSS_MOS03
-        # - 2592879453440835584  #PS_XMMLSS_MOS04
-        # - 2592949822185013248  #PS_XMMLSS_MOS05
-        # - 2593020190929190912  #PS_XMMLSS_MOS06
-        # - 2593653509626789888  #PS_CDFS_MOS00
-        # - 2593723878370967552  #PS_CDFS_MOS01
-        # - 2593794247115145216  #PS_CDFS_MOS02
-        # - 2593864615859322880  #PS_CDFS_MOS03
-        # - 2593934984603500544  #PS_CDFS_MOS04
-        # - 2594005353347678208  #PS_CDFS_MOS05
-        # - 2594075722091855872  #PS_CDFS_MOS06
-        # - 2597312684324028416  #PS_ELAISN1_MOS10
-        # - 2597383053068206080  #PS_ELAISN1_MOS11
-        # - 2597453421812383744  #PS_ELAISN1_MOS12
-        # - 2597523790556561408  #PS_ELAISN1_MOS13
+        - 2592597978464124928  #PS_XMMLSS_MOS00
+        - 2592668347208302592  #PS_XMMLSS_MOS01
+        - 2592738715952480256  #PS_XMMLSS_MOS02
+        - 2592809084696657920  #PS_XMMLSS_MOS03
+        - 2592879453440835584  #PS_XMMLSS_MOS04
+        - 2592949822185013248  #PS_XMMLSS_MOS05
+        - 2593020190929190912  #PS_XMMLSS_MOS06
+        - 2593653509626789888  #PS_CDFS_MOS00
+        - 2593723878370967552  #PS_CDFS_MOS01
+        - 2593794247115145216  #PS_CDFS_MOS02
+        - 2593864615859322880  #PS_CDFS_MOS03
+        - 2593934984603500544  #PS_CDFS_MOS04
+        - 2594005353347678208  #PS_CDFS_MOS05
+        - 2594075722091855872  #PS_CDFS_MOS06
+        - 2597312684324028416  #PS_ELAISN1_MOS10
+        - 2597383053068206080  #PS_ELAISN1_MOS11
+        - 2597453421812383744  #PS_ELAISN1_MOS12
+        - 2597523790556561408  #PS_ELAISN1_MOS13
         - 2597594159300739072  #PS_ELAISN1_MOS14
         - 2597664528044916736  #PS_ELAISN1_MOS15
         - 2597734896789094400  #PS_ELAISN1_MOS16
@@ -50,13 +50,13 @@ observations:
         - 2598157109254160384  #PS_VVDS22H_MOS04
         - 2598227477998338048  #PS_VVDS22H_MOS05
         - 2598297846742515712  #PS_VVDS22H_MOS06
-        # - 2604912508670050304  #PS_COSMOS_MOS21
-        # - 2604982877414227968  #PS_COSMOS_MOS22
-        # - 2605053246158405632  #PS_COSMOS_MOS23
-        # - 2605123614902583296  #PS_COSMOS_MOS24
-        # - 2605193983646760960  #PS_COSMOS_MOS25
-        # - 2605264352416104448  #PS_COSMOS_MOS26
-        # - 2605334721135116288  #PS_COSMOS_MOS27
+        - 2604912508670050304  #PS_COSMOS_MOS21
+        - 2604982877414227968  #PS_COSMOS_MOS22
+        - 2605053246158405632  #PS_COSMOS_MOS23
+        - 2605123614902583296  #PS_COSMOS_MOS24
+        - 2605193983646760960  #PS_COSMOS_MOS25
+        - 2605264352416104448  #PS_COSMOS_MOS26
+        - 2605334721135116288  #PS_COSMOS_MOS27
         - 2607023571020546048  #PS_GROTH_MOS01
         - 2607093939764723712  #PS_GROTH_MOS02
         - 2607164308508901376  #PS_GROTH_MOS03
