--- a/vasca/vasca_cfg.yaml
+++ b/vasca/vasca_cfg.yaml
@@ -17,7 +17,17 @@ ressources:
     field_kwargs:
         data_path        : null
         visits_data_path : null 
-        
+
+cluster_src:
+    meanshift:
+        bandwidth     : 5               # In arcsec, to estimate it automatically specify "null"
+        seeds         : null
+        bin_seeding   : false
+        min_bin_freq  : 1
+        cluster_all   : true
+        n_jobs        : 4
+        max_iter      : 300
+                    
 observations:
   - observatory   : "GALEX"
     obs_filter    : "NUV"
