--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ vasca.egg-info
 development/*
 out/*
 vasca/examples/gPhoton/out
+vasca/examples/Swift_coverage/*.fits
 
 # Local documentation
 build/*
