--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ development/*
 out/*
 vasca/examples/gPhoton/out
 vasca/examples/Swift_coverage/*.fits
+vasca_pipeline*
 
 # Local documentation
 build/*
