--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ dependencies = [
   "PyYAML ~= 6.0",
   "scikit_learn ~= 1.0.2",
   "setuptools ~= 65.4.1",
-
+  "regions ~= 0.6",
 ]
 
 [project.urls]
