Improved memory usage, fields are only loaded when called.
Former-commit-id: 86523277e471264074cc9ac6c1a4a92acd369b62

--- a/vasca/test/resources/vasca_test_cfg.yaml
+++ b/vasca/test/resources/vasca_test_cfg.yaml
@@ -13,7 +13,7 @@ general:
     
 ressources:                      
     load_method      : "MAST_REMOTE"                         # Allowed are ["MAST_REMOTE", "MAST_LOCAL", "VASCA", "AUTO"]
-    load_products    : true                                  # Get data products from MAST, if false only meta data is loaded
+    load_products    : false                                  # Get data products from MAST, if false only meta data is loaded
     field_kwargs:
         data_path        : null
         visits_data_path : null
