--- a/vasca/vasca_cfg.yaml
+++ b/vasca/vasca_cfg.yaml
@@ -12,8 +12,8 @@ general:
     save_ref_srcs   : false                             # Store referenze sources into region file
     
 ressources:                      
-    load_method      : "VASCA"     # Allowed are ["MAST_REMOTE", "MAST_LOCAL", "VASCA", "AUTO"]
-    load_products    : true             # Get data products from MAST, if false only meta data is loaded
+    load_method      : "VASCA"    # Allowed are ["MAST_REMOTE", "MAST_LOCAL", "VASCA", "AUTO"]
+    load_products    : false             # Get data products from MAST, if false only meta data is loaded
     field_kwargs:
         data_path        : null
         visits_data_path : null 
@@ -67,13 +67,13 @@ observations:
         # - 2593934984603500544  #PS_CDFS_MOS04
         # - 2594005353347678208  #PS_CDFS_MOS05
         # - 2594075722091855872  #PS_CDFS_MOS06
-        - 2597312684324028416  #PS_ELAISN1_MOS10
-        - 2597383053068206080  #PS_ELAISN1_MOS11
-        - 2597453421812383744  #PS_ELAISN1_MOS12
-        - 2597523790556561408  #PS_ELAISN1_MOS13
-        - 2597594159300739072  #PS_ELAISN1_MOS14
+        # - 2597312684324028416  #PS_ELAISN1_MOS10
+        # - 2597383053068206080  #PS_ELAISN1_MOS11
+        # - 2597453421812383744  #PS_ELAISN1_MOS12
+        # - 2597523790556561408  #PS_ELAISN1_MOS13
+        # - 2597594159300739072  #PS_ELAISN1_MOS14
         - 2597664528044916736  #PS_ELAISN1_MOS15
-        - 2597734896789094400  #PS_ELAISN1_MOS16
+        # - 2597734896789094400  #PS_ELAISN1_MOS16
         # - 2597875634277449728  #PS_VVDS22H_MOS00
         # - 2597946003021627392  #PS_VVDS22H_MOS01
         # - 2598016371765805056  #PS_VVDS22H_MOS02
@@ -113,7 +113,7 @@ observations:
             range:
                 s2n            : [3.0,.inf]
                 r_fov          : [0.0,0.55]
-                point_src_prob : [0.2,1.0]
+                point_src_prob : [0.6,1.0]
                 bright_match   : [-0.5,0.5]
                 mag            : [15,26]
                 mag_err        : [0.000001,0.5]
@@ -121,7 +121,7 @@ observations:
             bitmask:
                 # Specify the artifacts to remove
                 # For GALEX a description is at the end of this document
-                artifacts : [2,4]
+                artifacts : [2,4,8,128]
         det_association : 
             table     : "tt_detections"
             ref_table : "tt_sources"
