--- a/vasca/vasca_cfg.yaml
+++ b/vasca/vasca_cfg.yaml
@@ -39,7 +39,7 @@ selection:
         sel_type : "and"
         range:        
             flux_cpval     : [-0.5,0.000000573303]  # 5 sigma, see https://en.wikipedia.org/wiki/Normal_distribution
-            mag_var_ex     : [0.0004,.inf]           # Excess variance above (0.02mag)²
+            #flux_var_ex     : [0.0004,.inf]           # Excess variance above (0.02mag)²
 
     #Select detections associated to sources
     det_association : 
