--- a/vasca/test/resources/vasca_test_cfg.yaml
+++ b/vasca/test/resources/vasca_test_cfg.yaml
@@ -36,11 +36,11 @@ selection:
             nr_det        : [1,.inf]          
     src_variability:
         table    : "tt_sources"
-        sel_type : "or"
+        sel_type : "and"
         range:        
-            flux_cpval     : [-0.5,0.000000573303]            # 5 sigma, see https://en.wikipedia.org/wiki/Normal_distribution
-            pos_cpval      : [1e-4,.inf] 
-            flux_nxv      : [0.0006,.inf] 
+            flux_cpval     : [-0.5,0.000000573303]  # 5 sigma, see https://en.wikipedia.org/wiki/Normal_distribution
+            pos_cpval      : [0.00000001,.inf] 
+            flux_nxv       : [0.0006,.inf] 
 
     det_association : 
         table     : "tt_detections"
